@@ -16,7 +16,6 @@ import uk.gov.hmcts.ethos.replacement.docmosis.helpers.DynamicListHelper;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.google.common.base.Strings.isNullOrEmpty;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.SELECT_NONE_VALUE;
@@ -133,7 +132,7 @@ public class MultipleSingleMidEventValidationService {
             jurCodesCollection = submitEvent.getCaseData().getJurCodesCollection().stream()
                     .map(jurCodesTypeItem ->
                             DynamicListHelper.getDynamicValue(jurCodesTypeItem.getValue().getJuridictionCodesList()))
-                    .collect(Collectors.toList());
+                    .toList();
 
         }
 
@@ -148,7 +147,7 @@ public class MultipleSingleMidEventValidationService {
             respondentCollection = submitEvent.getCaseData().getRespondentCollection().stream()
                     .map(respondentSumTypeItem ->
                             DynamicListHelper.getDynamicValue(respondentSumTypeItem.getValue().getRespondentName()))
-                    .collect(Collectors.toList());
+                    .toList();
 
         }
 
@@ -185,7 +184,7 @@ public class MultipleSingleMidEventValidationService {
                                             + " ("
                                             + representedTypeRItem.getValue().getRespRepName()
                                             + ")"))
-                    .collect(Collectors.toList());
+                    .toList();
 
         }
 
